; ModuleID = '/home/carl/AnghaBench/ish/kernel/extr_fs.c_sys_truncate64.c'
source_filename = "/home/carl/AnghaBench/ish/kernel/extr_fs.c_sys_truncate64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_PATH = common dso_local global i32 0, align 4
@_EFAULT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sys_truncate64(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %12 = load i32, i32* %7, align 4
  %13 = shl i32 %12, 32
  %14 = load i32, i32* %6, align 4
  %15 = or i32 %13, %14
  store i32 %15, i32* %8, align 4
  %16 = load i32, i32* @MAX_PATH, align 4
  %17 = zext i32 %16 to i64
  %18 = call i8* @llvm.stacksave()
  store i8* %18, i8** %9, align 8
  %19 = alloca i8, i64 %17, align 16
  store i64 %17, i64* %10, align 8
  %20 = load i32, i32* %5, align 4
  %21 = trunc i64 %17 to i32
  %22 = call i64 @user_read_string(i32 %20, i8* %19, i32 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %3
  %25 = load i32, i32* @_EFAULT, align 4
  store i32 %25, i32* %4, align 4
  store i32 1, i32* %11, align 4
  br label %31

26:                                               ; preds = %3
  %27 = load i32, i32* %8, align 4
  %28 = load i32, i32* %8, align 4
  %29 = call i32 @make_attr(i32 %27, i32 %28)
  %30 = call i32 @generic_setattrat(i32* null, i8* %19, i32 %29, i32 1)
  store i32 %30, i32* %4, align 4
  store i32 1, i32* %11, align 4
  br label %31

31:                                               ; preds = %26, %24
  %32 = load i8*, i8** %9, align 8
  call void @llvm.stackrestore(i8* %32)
  %33 = load i32, i32* %4, align 4
  ret i32 %33
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i64 @user_read_string(i32, i8*, i32) #2

declare dso_local i32 @generic_setattrat(i32*, i8*, i32, i32) #2

declare dso_local i32 @make_attr(i32, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
